# daak

./: .gitignore  LICENSE  README.md  daak.cabal  sources.txt
lib/DAAK/Algorithms/: Gamo.hs  NSGA2Mod.hs
lib/DAAK/Algorithms/Gamo/: Criteria.hs  Encoding.hs  JsonImport.hs  Packing.hs
lib/DAAK/Core/: Debug.hs  ResidualSpace.hs  Space3D.hs  Utilities.hs
lib/DAAK/Core/Random/: MT.hs
src/: GamoMain.hs  LiveAlgo.hs
testdata/: het_1.json  hom_1.json  hom_2.json  hom_3.json  hom_4.json  hom_5.json  test.json
